--- a/output/index.html
+++ b/output/index.html
@@ -1,28 +1,33 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Poster Position Picker</title>
+<head>
+    <title>Schedule Meeting</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <!-- Poster Position Picker Container -->
-    <div id="posterPositionPickerContainer">
-      <label for="xPositionInput">X Position (in pixels):</label>
-      <input type="number" id="xPositionInput" name="xposition">
+</head>
 
-      <label for="yPositionInput">Y Position (in pixels):</label>
-      <input type="number" id="yPositionInput" name="yposition">
+<body>
+    <form id="meetingForm">
+        <!-- Contact Selector -->
+        <label for="contactSelector">Select Contacts:</label><br/>
+        <select id="contactSelector" multiple required>
+            <option value="">--Please choose an option--</option> 
+            <!-- Options will be populated dynamically using JS -->
+        </select><br/>
 
-      <button onclick="submitPositions()">Submit Positions</button>
+        <!-- Time Slot Selector -->
+        <label for="timeSlotSelector">Select Time Slot:</label><br/>
+        <select id="timeSlotSelector" required>
+            <!-- Options will be populated dynamically using JS -->
+            </select><br/>
 
-      <!-- Placeholder for visual representation -->
-      <!-- This would be replaced with an actual image in a real scenario -->
-      <div id='posterPlaceholder'>
-        Concert Name Here
-        <!-- The position indicator will move based on input values -->
-        <span id='positionIndicator'></span> 
-      </div>
+         <!-- Agenda Input Field -->   
+         <label for='agenda'>Agenda:</label><br/>  
+         <input type='text' id='agenda' name='agenda'><br/>
 
-    </div>  
-  </body>
+         <!-- Submit Button -->   
+         <button type='submit' onclick= 'scheduleMeeting()'>Schedule Meeting</button>  
+     </form> 
+<script src = "script.js"></script>    
+</body>
+
 </html>
